--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -12,6 +12,7 @@ body {
     flex-direction: column;
     padding: 1rem;
     margin: 0 auto;
+    flex: 1;
 
     .title {
         font-size: var(--font-size-xxl);
