--- a/styles/blogpost.scss
+++ b/styles/blogpost.scss
@@ -16,6 +16,11 @@ main {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    max-width: 70ch;
+    margin: 0 auto;
+    @media (max-width: $breakpoint-sm) {
+        padding: 1rem;
+    }
 
     .title {
         font-size: var(--font-size-xxl);
