--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -28,6 +28,8 @@ body {
         display: flex;
         gap: 2rem;
         flex-direction: row;
+        background: aliceblue;
+        padding: 1rem;
         @media (max-width: $breakpoint-sm) {
             flex-direction: column;
             gap: 0.5rem;
@@ -41,9 +43,7 @@ body {
             align-items: center;
             flex-direction: column;
             img {
-                aspect-ratio: 1/1;
                 object-fit: cover;
-                object-position: bottom;
             }
             @media (max-width: $breakpoint-sm) {
                 img {
@@ -53,6 +53,9 @@ body {
         }
         .right {
             flex: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
             h2 {
                 max-width: 50ch;
                 font-size: var(--font-size-md);
@@ -80,6 +83,7 @@ body {
             border-radius: 2px;
             background-color: brown;
             color: wheat;
+            font-size: var(--font-size-xs);
         }
         .tag:nth-child(2n) {
             background-color: darkslateblue;
@@ -91,5 +95,11 @@ body {
     }
 
     @media (max-width: $breakpoint-sm) {
+    }
+}
+
+body.dark {
+    .post {
+        background-color: #000000;
     }
 }
