--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -48,6 +48,7 @@ body {
             @media (max-width: $breakpoint-sm) {
                 img {
                     height: 90%;
+                    aspect-ratio: 2/1;
                 }
             }
         }
@@ -55,7 +56,7 @@ body {
             flex: 1;
             display: flex;
             flex-direction: column;
-            justify-content: flex-end;
+            justify-content: space-between;
             h2 {
                 max-width: 50ch;
                 font-size: var(--font-size-md);
