--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -28,7 +28,6 @@ body {
         display: flex;
         gap: 2rem;
         flex-direction: row;
-        background: aliceblue;
         padding: 1rem;
         @media (max-width: $breakpoint-sm) {
             flex-direction: column;
@@ -49,6 +48,7 @@ body {
                 img {
                     height: 90%;
                     aspect-ratio: 2/1;
+                    max-height: 300px;
                 }
             }
         }
@@ -57,6 +57,12 @@ body {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            max-width: 40vw;
+            margin-left: 2rem;
+            @media (max-width: $breakpoint-sm) {
+                max-width: unset;
+                margin-left: 0;
+            }
             h2 {
                 max-width: 50ch;
                 font-size: var(--font-size-md);
@@ -101,6 +107,5 @@ body {
 
 body.dark {
     .post {
-        background-color: #000000;
     }
 }
