--- a/_includes/tagged-posts.liquid
+++ b/_includes/tagged-posts.liquid
@@ -2,76 +2,34 @@
 permalink: tags-page.html
 ---
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-    <link rel="shortcut icon" href="/assets/logo.svg" type="image/x-icon">
-    <meta name="description" content="Community telegram sulla coltivazione della cannabis.">
-    <meta property="og:title" content="Canapa Coltivazione">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="/blog/">
-    <meta property="og:image" content="/assets/avatar.png">
-    <meta property="og:description" content="Community telegram sulla coltivazione della cannabis.">
-    <meta name="robots" content="noindex">
-
-    <link rel="preload" href="/assets/Graphik-Regular-Web.woff2" as="font" type="font/woff2" crossorigin />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="/assets/main.js" defer></script>
-    <link rel="stylesheet" href="/styles/targeted-articles.css">
+    <title>{{ renderData.title }}</title>
+    {% include 'head.html' %}
+    <link rel="stylesheet" href="/styles/tagged-posts.css">
 </head>
 
 <body>
-    <script>
-        const theme = localStorage.getItem('theme');
-        if (theme === 'dark') {
-            document.body.classList.add('dark');
-        }
-    </script>
-    <script>
-        const onLangChange = (toLang, pageUrl) => {
-
-            if (pageUrl.includes("en"))
-                pageUrl = pageUrl.split("en").slice(1)
-
-            if (toLang === "en") {
-                window.location.href = new URL(window.location.protocol + "//" + window.location.host + "/en" + pageUrl);
-            }
-            else {
-                window.location.href = new URL(window.location.protocol + "//" + window.location.host + pageUrl);
-            }
-        }
-    </script>
-    <header class="page-header">
+    {% include 'theme' %}
+    {% include 'header' %}
+    <main class="blog-content flow">
+        <h1 class="title">{{ renderData.title }}</h1>
+        <p class="subtitle">Browse the following posts</p>
+        {{content}}
+    </main>
+    <footer class="page-footer">
         <div class="container">
-            <a href="javascript:toggleSidebar()" class="icon-btn" title="Menu" id="menu_btn"><svg class="icon">
-                    <use href="/assets/bars.svg#content" />
-                </svg></a>
-            <a href="/">
-                <i class="fa fa-lastfm-square logo" aria-hidden="true"></i>
-            </a>
-
-            <nav>
-            </nav>
-            <a href="#"> 404</a>
-            <a href="#"> About </a>
-            <a id="theme_switch" class="icon-btn" href="javascript:toggleTheme()" title="Change theme"><svg
-                    class="icon">
-                    <use href="/assets/moon.svg#content" />
-                </svg></a>
-
+            <small>Copyright <b>{{site.author}}</b></small>
         </div>
-    </header>
-
-    <div class="main">
-
-        <h1 class="posts-heading">{{ renderData.title }}</h1>
-        {{ content }}
-
-    </div>
+    </footer>
+    <div class="overlay" id="main_overlay" onclick="toggleSidebar()"></div>
+    <aside id="sidebar">
+        <a href="javascript:toggleSidebar()" class="icon-btn" title="Close"><svg class="icon">
+                <use href="/assets/cross.svg#content" />
+            </svg></a>
+        {% include 'menu' %}
+    </aside>
 </body>
 
 </html>
