--- a/en/contact.liquid
+++ b/en/contact.liquid
@@ -11,17 +11,20 @@
     {% include 'header' %}
     <main>
         <div class="contact">
-            <h2>Contact</h2>
+            <h1>Contatti</h1>
             <div class="flow">
                 <p>
                     Hai domande, curiosità, dubbi sulla coltivazione di cannabis?</p>
+
                 <p> Vuoi diventare un volontario di clinkpac.com?</p>
+
                 <p> Hai bisogno di materiale di informazione sulla coltivazione o qualsiasi altro materiale legato alla
                     cannabis?</p>
             </div>
-
-            <p>Email → <a href="mailto:canapa@protonmail.com">canapa@protonmail.com</a></p>
-            <p>Telegram → <a href="https://t.me/coltivazionelink">t.me/coltivazionelink</a></p>
+            <div class="details flow">
+                <p class="email">Email → <a href="mailto:canapa@protonmail.com">canapa@protonmail.com</a></p>
+                <p class="tele">Telegram → <a href="https://t.me/coltivazionelink">t.me/coltivazionelink</a></p>
+            </div>
         </div>
     </main>
     <footer class="page-footer">
