--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -1,85 +1,85 @@
-@import 'reset';
-@import 'variables';
-@import 'utilities';
+@import "reset";
+@import "variables";
+@import "utilities";
 
 a {
-    color: currentColor;
+  color: currentColor;
+  text-decoration: none;
+  &:hover {
     text-decoration: none;
-    &:hover {
-        text-decoration: none;
-    }
-    display: inline-block;
+  }
+  display: inline-block;
 }
 
 :focus {
-    outline: 2px dotted;
-    outline-offset: 0.25rem;
+  outline: 2px dotted;
+  outline-offset: 0.25rem;
 }
 
 @font-face {
-    font-family: 'Graphik Regular';
-    src: url('/assets/Graphik-Regular-Web.woff2') format('woff2');
-    font-display: swap;
+  font-family: "Graphik Regular";
+  src: url("/assets/Graphik-Regular-Web.woff2") format("woff2");
+  font-display: swap;
 }
 
 .container {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1100px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1100px;
 }
 
 svg.icon {
-    display: block;
-    height: 1em;
-    width: 1em;
+  display: block;
+  height: 1em;
+  width: 1em;
 }
 
 body {
-    font-family: 'Graphik Regular', sans-serif;
-    line-height: 1.65;
-    min-height: 100%;
-    display: flex;
-    flex-direction: column;
+  font-family: "Graphik Regular", sans-serif;
+  line-height: 1.65;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 :root {
-    --accent: #2d9cdb;
-    --grey: #444;
-    --bg: white;
-    --fg: black;
-    --bg2: white;
-    --stroke-color: #ddd;
-    --date-color: rgba(0, 0, 0, 0.65);
-    --sharp-color: #000;
-    --hov: blue;
+  --accent: #2d9cdb;
+  --grey: #444;
+  --bg: white;
+  --fg: black;
+  --bg2: white;
+  --stroke-color: #ddd;
+  --date-color: rgba(0, 0, 0, 0.65);
+  --sharp-color: #000;
+  --hov: blue;
 
-    --font-size-sm: clamp(0.8rem, 0.17vw + 0.76rem, 0.89rem);
-    --font-size-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
-    --font-size-md: clamp(1.25rem, 0.61vw + 1.1rem, 1.58rem);
-    --font-size-lg: clamp(1.56rem, 1vw + 1.31rem, 2.11rem);
-    --font-size-xl: clamp(1.95rem, 1.56vw + 1.56rem, 2.81rem);
-    --font-size-xxl: clamp(2.44rem, 2.38vw + 1.85rem, 3.75rem);
-    --font-size-xxxl: clamp(3.05rem, 3.54vw + 2.17rem, 5rem);
+  --font-size-sm: clamp(0.8rem, 0.17vw + 0.76rem, 0.89rem);
+  --font-size-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
+  --font-size-md: clamp(1.25rem, 0.61vw + 1.1rem, 1.58rem);
+  --font-size-lg: clamp(1.56rem, 1vw + 1.31rem, 2.11rem);
+  --font-size-xl: clamp(1.95rem, 1.56vw + 1.56rem, 2.81rem);
+  --font-size-xxl: clamp(2.44rem, 2.38vw + 1.85rem, 3.75rem);
+  --font-size-xxxl: clamp(3.05rem, 3.54vw + 2.17rem, 5rem);
 }
 
 body.dark {
-    --bg: #212121;
-    --fg: #ccc;
-    --bg2: #2b2b2b;
-    --stroke-color: #555;
-    --date-color: white;
-    --sharp-color: #fff;
-    --hov: white;
+  --bg: #212121;
+  --fg: #ccc;
+  --bg2: #2b2b2b;
+  --stroke-color: #555;
+  --date-color: white;
+  --sharp-color: #fff;
+  --hov: white;
 }
 
 blockquote {
-    margin: 16px 0;
-    padding: 1em;
-    background-color: #ffb6c185;
-    color: black;
+  margin: 16px 0;
+  padding: 1em;
+  background-color: #ffb6c185;
+  color: black;
 }
 
 body.dark blockquote {
-    background-color: grey;
-    color: white;
+  background-color: grey;
+  color: white;
 }
