Fix for some homepage styles

--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -109,7 +109,8 @@
         height: 20px;
     }
 
-    @media (max-width: 580px) {
+    /* Can't use scss variable */
+    @media (max-width: 640px) {
         .page-header nav>a {
             display: none;
         }
@@ -156,7 +157,8 @@
         align-self: flex-end;
     }
 
-    @media (max-width: 580px) {
+    /* Can't use scss variable */
+    @media (max-width: 640px) {
 
         #menu_btn,
         #sidebar {
