--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -22,6 +22,9 @@ body {
     margin: 0;
     font-size: var(--font-size-md);
     margin-bottom: 32px;
+    @media (max-width: $breakpoint-sm) {
+      margin-bottom: 8px;
+    }
   }
 
   .post {
@@ -66,6 +69,7 @@ body {
       h2 {
         max-width: 50ch;
         font-size: var(--font-size-md);
+        text-decoration: underline;
       }
       .snippet {
         max-width: 40ch;
