--- a/styles/blogpost.scss
+++ b/styles/blogpost.scss
@@ -24,13 +24,14 @@ main {
 
   .title {
     font-size: var(--font-size-xxl);
+    line-height: 1.3;
   }
 
   img {
     border-radius: 2px;
-    margin: 0.5rem 0 2rem 0;
+    margin: .5rem 0 0.1rem 0;
     width: 100vw;
-    aspect-ratio: 16/9;
+    aspect-ratio: 4/3;
   }
 
   .date {
