--- a/styles/tagged-posts.scss
+++ b/styles/tagged-posts.scss
@@ -22,13 +22,15 @@ body {
     margin: 0;
     font-size: var(--font-size-md);
     margin-bottom: 32px;
+    @media (max-width: $breakpoint-sm) {
+      margin-bottom: 8px;
+    }
   }
 
   .post {
     display: flex;
     gap: 2rem;
     flex-direction: row;
-    padding: 1rem;
     @media (max-width: $breakpoint-sm) {
       flex-direction: column;
       gap: 0.5rem;
@@ -67,6 +69,7 @@ body {
       h2 {
         max-width: 50ch;
         font-size: var(--font-size-md);
+        text-decoration: underline;
       }
       .snippet {
         max-width: 40ch;
