--- a/styles/blogpost.scss
+++ b/styles/blogpost.scss
@@ -63,4 +63,10 @@ main {
     font-size: var(--font-size-base);
     margin-top: 1rem;
   }
+
+  .backlink {
+    text-decoration: underline;
+    font-size: var(--font-size-md);
+    margin-top: 1rem;
+  }
 }
