Use unicode back arrow

--- a/_includes/blogpost.liquid
+++ b/_includes/blogpost.liquid
@@ -27,9 +27,9 @@
             </div>
             <div class="text">{{content}}</div>
             {% if locale == "en" %}
-            <a class="backlink" href="/en/blog">&leftarrow; View All Articles</a>
+            <a class="backlink" href="/en/blog">← View All Articles</a>
             {% else %}
-            <a class="backlink" href="/blog">&leftarrow; View All Articles</a>
+            <a class="backlink" href="/blog">← View All Articles</a>
             {% endif %}
         </div>
     </main>
