--- a/styles/blogpost.scss
+++ b/styles/blogpost.scss
@@ -85,6 +85,8 @@ main {
       display: flex;
       gap: 2rem;
       flex-direction: row;
+      border-bottom: 1px solid var(--lineColor);
+      padding-bottom: 8px;
       @media (max-width: $breakpoint-sm) {
         flex-direction: column;
         gap: 0.5rem;
