Fix height of snippet

--- a/styles/tagged-posts.scss
+++ b/styles/tagged-posts.scss
@@ -77,6 +77,10 @@ body {
       }
       .snippet {
         max-width: 40ch;
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;  
+        overflow: hidden;
         @media (max-width: $breakpoint-sm) {
           display: none;
         }
