--- a/tag-pages-english.liquid
+++ b/tag-pages-english.liquid
@@ -29,7 +29,7 @@ permalink: /en/tags/{{ tag }}/
             <a href="{{ post.url }}">
                 <h2>{{ post.data.title }}</h2>
             </a>
-            <p class="snippet">{{ post.data.snippet }}</p>
+            <p class="snippet" title="{{ post.data.snippet }}">{{ post.data.snippet }}</p>
         </div>
         <div class="tags">
             {% assign tagsList = post.data.tags | removeDefaultTags %}
