Remove underline from last of post

--- a/styles/tagged-posts.scss
+++ b/styles/tagged-posts.scss
@@ -28,11 +28,14 @@ body {
     }
   }
 
+  .post:not(:last-child) {
+    border-bottom: 1px solid var(--lineColor);
+  }
+
   .post {
     display: flex;
     gap: 2rem;
     flex-direction: row;
-    border-bottom: 1px solid var(--lineColor);
     padding-bottom: var(--flow-space, 1.5em);
     @media (max-width: $breakpoint-sm) {
       flex-direction: column;
