Hide english posts for now

--- a/_includes/blogpost.liquid
+++ b/_includes/blogpost.liquid
@@ -18,7 +18,7 @@
         <div class="content">
             <p class="date">{{ date | date: '%B %e, %Y' }}</p>
             <h1 class="title">{{title}}</h1>
-            <img src="/{{imagePath }}" alt="" class="post-image">
+            <img src="{{imagePath }}" alt="" class="post-image">
             <div class="tags">
                 {% assign tagsList = tags | removeDefaultTags %}
                 {% for tag in tagsList %}
@@ -47,7 +47,7 @@
                 {% for post in relatedPosts %}
                 <div class="post">
                     <div class="left">
-                        <img src="/{{ post.data.imagePath }}" alt="">
+                        <img src="{{ post.data.imagePath }}" alt="">
                     </div>
                     <div class="right">
                         <div class="top">
