--- a/blog.liquid
+++ b/blog.liquid
@@ -15,7 +15,7 @@
         {% for post in collections.posts reversed %}
         <div class="post">
             <div class="left">
-                <img src="/{{ post.data.imagePath }}" alt="">
+                <img src="{{ post.data.imagePath }}" alt="">
             </div>
             <div class="right">
                 <div class="top">
