--- a/tag-pages-english.liquid
+++ b/tag-pages-english.liquid
@@ -21,7 +21,7 @@ permalink: /en/tags/{{ tag }}/
 {% for post in taggedCollections %}
 <div class="post">
     <div class="left">
-        <img src="/{{ post.data.imagePath }}" alt="">
+        <img src="{{ post.data.imagePath }}" alt="">
     </div>
     <div class="right">
         <div class="top">
