--- a/tag-pages.liquid
+++ b/tag-pages.liquid
@@ -16,7 +16,7 @@ permalink: /tags/{{ tag }}/
 {% for post in taggedCollections %}
 <div class="post">
     <div class="left">
-        <img src="/{{ post.data.imagePath }}" alt="">
+        <img src="{{ post.data.imagePath }}" alt="">
     </div>
     <div class="right">
         <div class="top">
