--- a/styles/blog.scss
+++ b/styles/blog.scss
@@ -52,6 +52,7 @@ body {
       img {
         object-fit: cover;
         border-radius: 2px;
+        aspect-ratio: 16/10;
       }
       @media (max-width: $breakpoint-sm) {
         img {
