--- a/styles/blogpost.scss
+++ b/styles/blogpost.scss
@@ -193,3 +193,24 @@ ol {
   margin-bottom: 1rem;
   list-style-type: decimal;
 }
+
+a {
+  text-decoration: underline;
+}
+
+.direct-link {
+  font-family: sans-serif;
+  text-decoration: none;
+  font-style: normal;
+  margin-left: 0.1em;
+}
+a[href].direct-link,
+a[href].direct-link:visited {
+  color: transparent;
+}
+a[href].direct-link:focus,
+a[href].direct-link:focus:visited,
+:hover > a[href].direct-link,
+:hover > a[href].direct-link:visited {
+  color: #aaa;
+}
