--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -219,7 +219,7 @@
         <a id="theme_switch" class="icon-btn" href="javascript:toggleTheme()" title="Change theme"><svg class="icon">
                 <use href="/assets/moon.svg#content" />
             </svg></a>
-        <div id="lang_cont">
+        <!-- <div id="lang_cont">
             <a href="javascript:;" id="lang_switch" title="Change language">
                 {% if locale == "en" %}
                 <img src="/assets/gb.svg" alt="English" class="flag-img flag-img-english" />
@@ -246,6 +246,6 @@
                 </li>
                 {% endif %}
             </ul>
-        </div>
+        </div> -->
     </div>
 </header>
