--- a/styles/blogpost.scss
+++ b/styles/blogpost.scss
@@ -1,216 +1,216 @@
-@import "global";
+@import 'global';
 
 body {
-  background-color: var(--bg);
-  color: var(--fg);
-  display: flex;
-  flex-direction: column;
+    background-color: var(--bg);
+    color: var(--fg);
+    display: flex;
+    flex-direction: column;
 }
 
 main {
-  flex: 1;
+    flex: 1;
 }
 
 .content {
-  padding: 2rem;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  max-width: 70ch;
-  margin: 0 auto;
-  @media (max-width: $breakpoint-sm) {
-    padding: 1rem;
-  }
-
-  .title {
-    font-size: var(--font-size-xxl);
-    line-height: 1.3;
-  }
-
-  .post-image {
-    border-radius: 2px;
-    margin: 0.5rem 0 0.1rem 0;
-    width: 100vw;
-    aspect-ratio: 4/3;
-  }
-
-  .date {
-    color: #666666;
-    font-size: var(--font-size-xs);
-  }
-
-  .tags {
-    margin-top: 0.5rem;
+    padding: 2rem;
     display: flex;
-    gap: 4px;
-    flex-wrap: wrap;
-  }
-
-  .tag {
-    border: 1px solid wheat;
-    padding: 4px;
-    border-radius: 2px;
-    background-color: brown;
-    color: wheat;
-  }
-
-  .tag:nth-child(2n) {
-    background-color: darkslateblue;
-    color: wheat;
-  }
-
-  .text {
-    font-size: var(--font-size-base);
-    margin-top: 1rem;
-  }
-
-  .backlink {
-    font-size: var(--font-size-base);
-    font-weight: bold;
-    margin-top: 1rem;
-    display: flex;
-    align-items: center;
-    border-bottom: 0.5px solid black;
-    img {
-      margin-right: 0.2rem;
-    }
-  }
-
-  .similar-articles {
-    margin-top: 2rem;
-    .similar {
-      font-size: var(--font-size-lg);
+    flex-direction: column;
+    align-items: flex-start;
+    max-width: 70ch;
+    margin: 0 auto;
+    @media (max-width: $breakpoint-sm) {
+        padding: 1rem;
     }
 
-    .post:not(:last-child) {
-      border-bottom: 1px solid var(--lineColor);
+    .title {
+        font-size: var(--font-size-xxl);
+        line-height: 1.3;
     }
 
-    .post {
-      display: flex;
-      gap: 2rem;
-      flex-direction: row;
-      padding-bottom: var(--flow-space, 1.5em);
-      @media (max-width: $breakpoint-sm) {
-        flex-direction: column;
-        gap: 0.5rem;
-        --flow-space: 1em;
-      }
-      .left {
-        max-width: 300px;
-        @media (max-width: $breakpoint-sm) {
-          max-width: 100%;
-        }
+    .post-image {
+        border-radius: 2px;
+        margin: 0.5rem 0 0.1rem 0;
+        width: 100vw;
+        aspect-ratio: 4/3;
+        object-fit: cover;
+    }
+
+    .date {
+        color: #666666;
+        font-size: var(--font-size-xs);
+    }
+
+    .tags {
+        margin-top: 0.5rem;
         display: flex;
-        align-items: center;
-        flex-direction: column;
-        img {
-          object-fit: cover;
-          border-radius: 2px;
-        }
-        @media (max-width: $breakpoint-sm) {
-          img {
-            height: 90%;
-            aspect-ratio: 4/3;
-            max-height: 300px;
-          }
-        }
-      }
-      .right {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        max-width: 40vw;
-        margin-left: 2rem;
-        @media (max-width: $breakpoint-sm) {
-          max-width: unset;
-          margin-left: 0;
-        }
-        h2 {
-          max-width: 50ch;
-          font-size: var(--font-size-md);
-          text-decoration: underline;
-        }
-        .snippet {
-          max-width: 40ch;
-          display: -webkit-box;
-          -webkit-line-clamp: 3;
-          -webkit-box-orient: vertical;
-          overflow: hidden;
-          @media (max-width: $breakpoint-sm) {
-            display: none;
-          }
-        }
-        .tags {
-          margin-top: 0.5rem;
-          display: flex;
-          gap: 4px;
-          flex-wrap: wrap;
-        }
-        .date {
-          color: #666666;
-          font-size: var(--font-size-xs);
-        }
-      }
-      .tag {
+        gap: 4px;
+        flex-wrap: wrap;
+    }
+
+    .tag {
         border: 1px solid wheat;
         padding: 4px;
         border-radius: 2px;
         background-color: brown;
         color: wheat;
-        font-size: var(--font-size-xs);
-      }
-      .tag:nth-child(2n) {
+    }
+
+    .tag:nth-child(2n) {
         background-color: darkslateblue;
         color: wheat;
-      }
     }
-  }
+
+    .text {
+        font-size: var(--font-size-base);
+        margin-top: 1rem;
+        a {
+            text-decoration: underline;
+        }
+
+        .direct-link {
+            font-family: sans-serif;
+            text-decoration: none;
+            font-style: normal;
+            margin-left: 0.1em;
+        }
+        a[href].direct-link,
+        a[href].direct-link:visited {
+            color: transparent;
+        }
+        a[href].direct-link:focus,
+        a[href].direct-link:focus:visited,
+        :hover > a[href].direct-link,
+        :hover > a[href].direct-link:visited {
+            color: #aaa;
+        }
+    }
+
+    .backlink {
+        font-size: var(--font-size-base);
+        font-weight: bold;
+        margin-top: 1rem;
+        display: flex;
+        align-items: center;
+        border-bottom: 0.5px solid black;
+        img {
+            margin-right: 0.2rem;
+        }
+    }
+
+    .similar-articles {
+        margin-top: 2rem;
+        .similar {
+            font-size: var(--font-size-lg);
+        }
+
+        .post:not(:last-child) {
+            border-bottom: 1px solid var(--lineColor);
+        }
+
+        .post {
+            display: flex;
+            gap: 2rem;
+            flex-direction: row;
+            padding-bottom: var(--flow-space, 1.5em);
+            @media (max-width: $breakpoint-sm) {
+                flex-direction: column;
+                gap: 0.5rem;
+                --flow-space: 1em;
+            }
+            .left {
+                max-width: 300px;
+                @media (max-width: $breakpoint-sm) {
+                    max-width: 100%;
+                }
+                display: flex;
+                align-items: center;
+                flex-direction: column;
+                img {
+                    object-fit: cover;
+                    border-radius: 2px;
+                }
+                @media (max-width: $breakpoint-sm) {
+                    img {
+                        height: 90%;
+                        aspect-ratio: 4/3;
+                        max-height: 300px;
+                    }
+                }
+            }
+            .right {
+                flex: 1;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                max-width: 40vw;
+                margin-left: 2rem;
+                @media (max-width: $breakpoint-sm) {
+                    max-width: unset;
+                    margin-left: 0;
+                }
+                h2 {
+                    max-width: 50ch;
+                    font-size: var(--font-size-md);
+                    text-decoration: underline;
+                }
+                .snippet {
+                    max-width: 40ch;
+                    display: -webkit-box;
+                    -webkit-line-clamp: 3;
+                    -webkit-box-orient: vertical;
+                    overflow: hidden;
+                    @media (max-width: $breakpoint-sm) {
+                        display: none;
+                    }
+                }
+                .tags {
+                    margin-top: 0.5rem;
+                    display: flex;
+                    gap: 4px;
+                    flex-wrap: wrap;
+                }
+                .date {
+                    color: #666666;
+                    font-size: var(--font-size-xs);
+                }
+            }
+            .tag {
+                border: 1px solid wheat;
+                padding: 4px;
+                border-radius: 2px;
+                background-color: brown;
+                color: wheat;
+                font-size: var(--font-size-xs);
+            }
+            .tag:nth-child(2n) {
+                background-color: darkslateblue;
+                color: wheat;
+            }
+        }
+    }
 }
 
 body.dark {
-  .backlink {
-    border-bottom: 0.5px solid white;
-    color: white;
-    img {
-      color: white;
-      margin-right: 0.2rem;
+    .backlink {
+        border-bottom: 0.5px solid white;
+        color: white;
+        img {
+            color: white;
+            margin-right: 0.2rem;
+        }
     }
-  }
 }
 
 ul {
-  margin-left: 1.5em;
-  margin-bottom: 1rem;
-  list-style-type: disc;
-  list-style-position: outside;
-  list-style-image: none;
+    margin-left: 1.5em;
+    margin-bottom: 1rem;
+    list-style-type: disc;
+    list-style-position: outside;
+    list-style-image: none;
 }
 
 ol {
-  margin-left: 1.25em;
-  margin-bottom: 1rem;
-  list-style-type: decimal;
-}
-
-a {
-  text-decoration: underline;
-}
-
-.direct-link {
-  font-family: sans-serif;
-  text-decoration: none;
-  font-style: normal;
-  margin-left: 0.1em;
-}
-a[href].direct-link,
-a[href].direct-link:visited {
-  color: transparent;
-}
-a[href].direct-link:focus,
-a[href].direct-link:focus:visited,
-:hover > a[href].direct-link,
-:hover > a[href].direct-link:visited {
-  color: #aaa;
+    margin-left: 1.25em;
+    margin-bottom: 1rem;
+    list-style-type: decimal;
 }
