--- a/styles/blogpost.scss
+++ b/styles/blogpost.scss
@@ -63,6 +63,13 @@ main {
     .text {
         font-size: var(--font-size-base);
         margin-top: 1rem;
+        h1,
+        h2,
+        h3,
+        h4,
+        h5 {
+            margin-top: 1.5rem;
+        }
         a {
             text-decoration: underline;
         }
