--- a/styles/blogpost.scss
+++ b/styles/blogpost.scss
@@ -1,10 +1,12 @@
 @import 'global';
+@import 'https://api.fontshare.com/v2/css?f[]=satoshi&display=swap';
 
 body {
     background-color: var(--bg);
     color: var(--fg);
     display: flex;
     flex-direction: column;
+    font-family: 'Satoshi', sans-serif;
 }
 
 main {
@@ -79,6 +81,9 @@ main {
             text-decoration: none;
             font-style: normal;
             margin-left: 0.1em;
+            @media (max-width: $breakpoint-sm) {
+                display: none;
+            }
         }
         a[href].direct-link,
         a[href].direct-link:visited {
