--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,8 +1,15 @@
-{% assign metatitle = site.title %} {% if title %} {% assign metatitle =
-metatitle | prepend: " • " | prepend: title %} {% endif %} {% assign metadesc =
-site.desc %} {% if desc %} {% assign metadesc = desc %} {% endif %} {% assign
-metatype = "website" %} {% if type == "note" %} {% assign metatype = "article"
-%} {% endif %}
+{% assign metatitle = site.title %}
+
+{% if title %}
+{% assign metatitle = metatitle | prepend: " • " | prepend: title %}
+{% endif %}
+
+{% assign metadesc = site.desc %}
+{% if desc %}
+  {% assign metadesc = desc %}
+{% endif %}
+
+{% assign metatype = "article" %}
 
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
