--- a/blog.liquid
+++ b/blog.liquid
@@ -9,6 +9,7 @@ noIndex: true
 <head>
     {% include 'head.html' %}
     <link rel="stylesheet" href="/styles/blog.css">
+    <meta name="robots" content="noindex, follow" />
 </head>
 
 <body>
