--- a/contact.liquid
+++ b/contact.liquid
@@ -8,6 +8,7 @@ title: Contact
 <head>
     {% include 'head.html' %}
     <link rel="stylesheet" href="/styles/contact.css">
+    <meta name="robots" content="noindex" />
 </head>
 
 <body>
