--- a/index.liquid
+++ b/index.liquid
@@ -4,6 +4,7 @@
 <head>
     {% include 'head.html' %}
     <link rel="stylesheet" href="/styles/homepage.css">
+    <meta name="robots" content="index" />
 </head>
 
 <body>
