--- a/index.liquid
+++ b/index.liquid
@@ -5,6 +5,7 @@
     {% include 'head.html' %}
     <link rel="stylesheet" href="/styles/homepage.css">
     <meta name="robots" content="index" />
+    <meta name="google-site-verification" content="-c23sGzXCgzEEH4wZW8sxxn_JaJqhwaEggIxC51jTOE" />
 </head>
 
 <body>
