--- a/about.liquid
+++ b/about.liquid
@@ -8,6 +8,7 @@ title: About
 <head>
     {% include 'head.html' %}
     <link rel="stylesheet" href="/styles/about.css">
+    <link rel="canonical" href="{{ page.url | prepend: site.baseurl }}" />
     <meta name="robots" content="noindex" />
 </head>
 
