--- a/index.liquid
+++ b/index.liquid
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/styles/homepage.css">
     <meta name="robots" content="index" />
     <meta name="google-site-verification" content="-c23sGzXCgzEEH4wZW8sxxn_JaJqhwaEggIxC51jTOE" />
+    <link rel="canonical" href="{{ page.url | prepend: site.baseurl }}" />
 </head>
 
 <body>
