--- a/tag-pages.liquid
+++ b/tag-pages.liquid
@@ -8,7 +8,7 @@ pagination:
     - post
     - postsEnglish
 layout: tagged-posts.liquid    
-renderData:
+eleventyComputed:
   title: Posts Tagged Under "{{ tag }}"
 permalink: /tags/{{ tag }}/
 ---
